fix(game): fix in game action to be higher on Z-index

--- a/src/pages/game/game.scss
+++ b/src/pages/game/game.scss
@@ -223,7 +223,7 @@
 
     &__action-in-progress {
         position: absolute;
-        z-index: 2;
+        z-index: 3;
         top: 0;
         left: 0;
         width: calc(100% - 1rem);
